--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,8 +215,8 @@ main {
     background-image: url("../images/050-mock-up.jpeg");
 }
 
-.horiseon {
-    background-image: url("../images/horiseon.png");
+.byteme {
+    background-image: url("../images/byteme.png");
 }
 
 .portfolio {
